--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,3 +18,25 @@ body {
   max-width: 320px;
   margin-bottom: 16px;
 }
+ul {
+  list-style: none;
+  padding: 0;
+}
+h1 {
+  margin: 0;
+  padding: 0;
+}
+.flag {
+  display: inline-flex;
+  align-items: center;
+  width: 35px;
+  height: 35px;
+  margin-right: 8px;
+}
+.name__flag {
+  display: flex;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+
+}
